--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "licia": "^1.8.0",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-slick": "^0.25.2"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
