--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-slick": "^0.25.2"
+    "react-slick": "^0.25.2",
+    "umi-request": "^1.2.6"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
