--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "antd": "^3.19.5",
     "dva": "^2.6.0-beta.6",
+    "js-cookie": "^2.2.1",
     "licia": "^1.8.0",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-slick": "^0.25.2",
     "umi-request": "^1.2.6"
   },
   "devDependencies": {
@@ -29,7 +29,9 @@
     "lint-staged": "^7.2.2",
     "react-test-renderer": "^16.7.0",
     "umi": "^2.7.7",
-    "umi-plugin-react": "^1.8.4"
+    "umi-plugin-react": "^1.8.4",
+    "slick-carousel": "^1.8.1",
+    "react-slick": "^0.25.2"
   },
   "lint-staged": {
     "*.{js,jsx}": [
