--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@umijs/plugin-qiankun": "^1.3.4",
     "antd": "^3.19.5",
+    "axios": "^0.19.0",
     "dva": "^2.6.0-beta.6",
     "js-cookie": "^2.2.1",
-    "licia": "^1.8.0",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
