--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@umijs/plugin-qiankun": "^1.3.4",
     "antd": "^3.19.5",
     "axios": "^0.19.0",
+    "braft-editor": "^2.3.8",
     "dva": "^2.6.0-beta.6",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
