--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "umi dev",
     "build": "cross-env UMI_ENV=prod umi build",
-    "test": "cross-env UMI_ENV=test umi dev",
+    "test": "cross-env UMI_ENV=test umi build",
     "lint": "eslint --ext .js src mock tests",
     "precommit": "lint-staged"
   },
