--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^3.19.5",
     "axios": "^0.19.0",
     "braft-editor": "^2.3.8",
+    "dayjs": "^1.8.18",
     "dva": "^2.6.0-beta.6",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
