--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@antv/data-set": "^0.11.1",
     "@umijs/plugin-qiankun": "^1.3.4",
     "antd": "^3.19.5",
     "axios": "^0.19.0",
