--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "start": "umi dev",
     "build": "cross-env UMI_ENV=prod umi build",
     "devs": "cross-env UMI_ENV=prod umi dev",
-    "test": "cross-env UMI_ENV=test umi build",
+    "test": "cross-env ANALYZE=1 UMI_ENV=test umi build",
     "lint": "eslint --ext .js src mock tests",
     "precommit": "lint-staged"
   },
   "dependencies": {
     "@antv/data-set": "^0.11.1",
+    "@umijs/hooks": "^1.8.0",
     "@umijs/plugin-qiankun": "^1.3.4",
     "antd": "^3.19.5",
     "axios": "^0.19.0",
