--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-viewer": "^3.2.1",
     "umi-request": "^1.2.6"
   },
   "devDependencies": {
