--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "umi-request": "^1.2.6"
   },
   "devDependencies": {
+    "@umijs/plugin-prerender": "^1.8.4",
     "babel-eslint": "^9.0.0",
     "eslint": "^5.4.0",
     "eslint-config-umi": "^1.4.0",
@@ -35,11 +36,11 @@
     "eslint-plugin-react": "^7.11.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "react-slick": "^0.25.2",
     "react-test-renderer": "^16.7.0",
-    "umi": "^2.7.7",
-    "umi-plugin-react": "^1.8.4",
     "slick-carousel": "^1.8.1",
-    "react-slick": "^0.25.2"
+    "umi": "^2.7.7",
+    "umi-plugin-react": "^1.8.4"
   },
   "lint-staged": {
     "*.{js,jsx}": [
