--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.0",
     "bizcharts": "^3.5.6",
     "braft-editor": "^2.3.8",
+    "cross-env": "^7.0.2",
     "dayjs": "^1.8.18",
     "dva": "^2.6.0-beta.6",
     "js-cookie": "^2.2.1",
