--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "cross-env UMI_ENV=prod umi build",
     "devs": "cross-env UMI_ENV=prod umi dev",
     "test": "cross-env UMI_ENV=test umi build",
-    "release": "cross-env UMI_ENV=test umi dev",
+    "release": "cross-env UMI_ENV=release umi dev",
     "lint": "eslint --ext .js src mock tests",
     "precommit": "lint-staged"
   },
