--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "start": "umi dev",
     "build": "cross-env UMI_ENV=prod umi build",
     "devs": "cross-env UMI_ENV=prod umi dev",
-    "test": "cross-env UMI_ENV=test umi build",
-    "release": "cross-env UMI_ENV=release umi dev",
+    "test": "cross-env UMI_ENV=test umi dev",
+    "release": "cross-env UMI_ENV=release umi build",
     "lint": "eslint --ext .js src mock tests",
     "precommit": "lint-staged"
   },
