--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dva": "^2.6.0-beta.6",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
+    "nprogress": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-viewer": "^3.2.1",
