--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-viewer": "^3.2.1",
+    "socket.io-client": "^2.3.0",
     "umi-request": "^1.2.6"
   },
   "devDependencies": {
