--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nprogress": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-infinite-scroller": "^1.2.4",
     "react-viewer": "^3.2.1",
     "sockjs-client": "1.1.4",
     "stompjs": "^2.3.3",
