--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.0.0-alpha.19",
     "@antv/data-set": "^0.11.1",
     "@umijs/hooks": "^1.8.0",
     "@umijs/plugin-qiankun": "^1.3.4",
