--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "nprogress": "^0.2.0",
+    "rc-texty": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-infinite-scroller": "^1.2.4",
