--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.0.0-alpha.19",
     "@antv/data-set": "^0.11.1",
+    "@chatui/core": "^0.2.2",
     "@umijs/hooks": "^1.8.0",
     "@umijs/plugin-qiankun": "^1.3.4",
     "antd": "^3.19.5",
